# PyThermoAI

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
examples/: create-agent.py  create-api.py  launch.py  prompts.py
pythermoai/: __init__.py  app.py
pythermoai/agents/: __init__.py  config.py  main.py  mcp_manager.py  prompts.py  symbols.py  thermo_agent.py
pythermoai/api/: ai_api.py  config_api.py  data_agent.py  deps.py  equations_agent.py  llm.py  main.py
pythermoai/config/: __init__.py  constants.py  settings.py
pythermoai/llms/: llm_models.py
pythermoai/models/: api.py  chat.py
pythermoai/ui/browser/: index.html  main-FAMKKY2Q.js  main-GDRK36GS.js  main-SHKQBCTE.js  main-XHSHVQQE.js  styles-3HBB2BVU.css  styles-XP544DDI.css
tests/: test0.py
