[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythermoai"
version = "0.1.1"
description = "PyThermoAI is a Python package that leverages intelligent agents to search the web for thermodynamic data and equations, and seamlessly integrates the results into PyThermoDB."
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]>=0.115.14",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-anthropic>=0.3.18",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.29",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "websockets>=15.0.1",
    "python-dotenv",
    "rich",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/PyThermoAI"


[tool.setuptools.packages.find]
where = ["."]
include = ["pythermoai*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"pythermoai" = [
    "config/*.yml",
    "data/*.csv",
    "ui/**/*",
    "ui/browser/*",
    "ui/browser/assets/**/*"
]

# Include all data files from MANIFEST.in
[tool.setuptools]
include-package-data = true
